--- a/weatherman.yaml
+++ b/weatherman.yaml
@@ -29,8 +29,12 @@ logger:
 
 # Enable Home Assistant API
 api:
+  encryption:
+    key: !secret api_encryption_key_weatherman
 
 ota:
+  - platform: esphome
+    password: !secret ota_password_weatherman
 
 
 button:
@@ -98,13 +102,13 @@ time:
 
 # Wifi information
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  ssid: !secret NoT_wifi_ssid
+  password: !secret NoT_wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: !secret weatherman_ap_ssid
-    password: !secret weatherman_ap_password
+    ssid: "Weatherman Fallback Hotspot"
+    password: "fYlZo6dUpmmy"
 
 
 # Include custom fonts
@@ -115,11 +119,11 @@ font:
   - file: 'fonts/GothamRnd-Bold.ttf'
     id: font_large_bold
     size: 108
-    glyphs: [' ', '-', '°', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'C']
+    glyphs: [' ', '-', '°', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'F']
   - file: 'fonts/GothamRnd-Bold.ttf'
     id: font_title
     size: 54
-    glyphs: ['W', 'E', 'A', 'T', 'H', 'R', 'L', 'I', 'N', ' ']
+    glyphs: ['W', 'E', 'A', 'T', 'H', 'R', '7', 'I', 'N', ' ']
   - file: 'fonts/GothamRnd-Bold.ttf'
     id: font_medium_bold
     size: 30
@@ -214,37 +218,37 @@ sensor:
 
   # Call Subway and Weather sensors from HA.
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_manhattan 
-    id: train_manhattan_due_in
+    entity_id: sensor.gtfs_mta_subway_7_to_queens 
+    id: train_7_to_queens_due_in
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
 
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_canarsie
-    id: train_canarsie_due_in
+    entity_id: sensor.gtfs_mta_subway_7_to_34_st_hudson_yards
+    id: train_7_to_34_st_hudson_yards_due_in
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
     
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_manhattan
+    entity_id: sensor.gtfs_mta_subway_7_to_queens
     attribute: Next bus due in
-    id: train_manhattan_next_train_due_in
+    id: train_7_to_queens_next_train_due_in
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
     
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_canarsie
+    entity_id: sensor.gtfs_mta_subway_7_to_34_st_hudson_yards
     attribute: Next bus due in
-    id: train_canarsie_next_train_due_in
+    id: train_7_to_34_st_hudson_yards_next_train_due_in
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
 
   - platform: homeassistant
-    entity_id: weather.hourly
+    entity_id: weather.forecast_home
     attribute: temperature
     id: weather_temperature
     on_value:
@@ -286,39 +290,39 @@ sensor:
 
 text_sensor:
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_manhattan
+    entity_id: sensor.gtfs_mta_subway_7_to_queens
     attribute: Due at
-    id: train_manhattan_due_at
+    id: train_7_to_queens_due_at
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
   
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_canarsie
+    entity_id: sensor.gtfs_mta_subway_7_to_34_st_hudson_yards
     attribute: Due at
-    id: train_canarsie_due_at
+    id: train_7_to_34_st_hudson_yards_due_at
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
   
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_manhattan
+    entity_id: sensor.gtfs_mta_subway_7_to_queens
     attribute: Next bus
-    id: train_manhattan_next_train_due_at
+    id: train_7_to_queens_next_train_due_at
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
   
   - platform: homeassistant
-    entity_id: sensor.gtfs_mta_subway_canarsie
+    entity_id: sensor.gtfs_mta_subway_7_to_34_st_hudson_yards
     attribute: Next bus
-    id: train_canarsie_next_train_due_at
+    id: train_7_to_34_st_hudson_yards_next_train_due_at
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
 
   - platform: homeassistant
-    entity_id: weather.valhalla_hourly
+    entity_id: weather.forecast_home
     id: weather_state
     on_value:
       then:
@@ -397,15 +401,15 @@ text_sensor:
         - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.weatherman_data
-    attribute: train_status_manhattan
-    id: train_status_manhattan
+    attribute: train_status_7_to_queens
+    id: train_status_7_to_queens
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.weatherman_data
-    attribute: train_status_canarsie
-    id: train_status_canarsie
+    attribute: train_status_7_to_34_st_hudson_yards
+    id: train_status_7_to_34_st_hudson_yards
     on_value:
       then:
         - lambda: 'id(data_updated) = true;'
@@ -438,7 +442,9 @@ display:
     id: eink_display
     cs_pin: GPIO15
     dc_pin: GPIO27
-    busy_pin: GPIO25
+    busy_pin:
+      number: GPIO25
+      inverted: true
     reset_pin: GPIO26
     reset_duration: 2ms
     model: 7.50inV2
@@ -460,6 +466,8 @@ display:
           {"night", "\U000F0594"},
           {"night-partly-cloudy", "\U000F0F31"},
           {"partlycloudy", "\U000F0595"},
+          {"partly-cloudy", "\U000F0595"},
+          {"clear-night", "\U000F0594"},
           {"partly-lightning", "\U000F0F32"},
           {"partly-rainy", "\U000F0F33"},
           {"partly-snowy", "\U000F0F34"},
@@ -494,44 +502,44 @@ display:
 
         it.printf(100, 158, id(font_mdi_large), color_text, TextAlign::TOP_CENTER, "%s", weather_icon_map[id(weather_condition_now).state.c_str()].c_str());
 
-        it.printf(300, 158, id(font_large_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°C", id(weather_temperature).state);
+        it.printf(300, 158, id(font_large_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°F", id(weather_temperature).state);
 
         it.printf(105, 282, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(weather_timestamp_0).state.c_str());
         it.printf(105, 306, id(font_mdi_medium), color_text, TextAlign::TOP_CENTER, "%s", weather_icon_map[id(weather_condition_0).state.c_str()].c_str());
-        it.printf(105, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°C", id(weather_temperature_0).state);
+        it.printf(105, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°F", id(weather_temperature_0).state);
 
         it.printf(195, 282, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(weather_timestamp_1).state.c_str());
         it.printf(195, 306, id(font_mdi_medium), color_text, TextAlign::TOP_CENTER, "%s", weather_icon_map[id(weather_condition_1).state.c_str()].c_str());
-        it.printf(195, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°C", id(weather_temperature_1).state);
+        it.printf(195, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°F", id(weather_temperature_1).state);
 
         it.printf(285, 282, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(weather_timestamp_2).state.c_str());
         it.printf(285, 306, id(font_mdi_medium), color_text, TextAlign::TOP_CENTER, "%s", weather_icon_map[id(weather_condition_2).state.c_str()].c_str());
-        it.printf(285, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°C", id(weather_temperature_2).state);
+        it.printf(285, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°F", id(weather_temperature_2).state);
 
         it.printf(375, 282, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(weather_timestamp_3).state.c_str());
         it.printf(375, 306, id(font_mdi_medium), color_text, TextAlign::TOP_CENTER, "%s", weather_icon_map[id(weather_condition_3).state.c_str()].c_str());
-        it.printf(375, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°C", id(weather_temperature_3).state);
-
+        it.printf(375, 354, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "%2.0f°F", id(weather_temperature_3).state);
+        
         // Train Service Section
         // it.image(0, 420, id(title_train)); 
-        it.printf(240, 408, id(font_title), color_text, TextAlign::TOP_CENTER, "L TRAIN");
+        it.printf(240, 408, id(font_title), color_text, TextAlign::TOP_CENTER, "7 TRAIN");
 
         it.printf(240, 472, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%s", id(train_status).state.c_str());
 
-        it.print(150, 524, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "TO MANHATTAN");
-        it.printf(150, 546, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_status_manhattan).state.c_str());
-        it.print(330, 524, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "TO CANARSIE");
-        it.printf(330, 546, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_status_canarsie).state.c_str());
+        it.print(150, 524, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "TO QUEENS");
+        it.printf(150, 546, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_status_7_to_queens).state.c_str());
+        it.print(330, 524, id(font_small_bold), color_text, TextAlign::TOP_CENTER, "TO 34 STREET");
+        it.printf(330, 546, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_status_7_to_34_st_hudson_yards).state.c_str());
 
-        it.printf(150, 584, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_manhattan_due_in).state);
-        it.printf(330, 584, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_canarsie_due_in).state);
-        it.printf(150, 616, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_manhattan_due_at).state.c_str());
-        it.printf(330, 616, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_manhattan_due_at).state.c_str());
+        it.printf(150, 584, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_7_to_queens_due_in).state);
+        it.printf(330, 584, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_7_to_34_st_hudson_yards_due_in).state);
+        it.printf(150, 616, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_7_to_queens_due_at).state.c_str());
+        it.printf(330, 616, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_7_to_34_st_hudson_yards_due_at).state.c_str());
 
-        it.printf(150, 652, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_manhattan_next_train_due_in).state);
-        it.printf(330, 652, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_canarsie_next_train_due_in).state);
-        it.printf(150, 684, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_manhattan_next_train_due_at).state.c_str());
-        it.printf(330, 684, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_canarsie_next_train_due_at).state.c_str());
+        it.printf(150, 652, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_7_to_queens_next_train_due_in).state);
+        it.printf(330, 652, id(font_medium_bold), color_text, TextAlign::TOP_CENTER, "%2.0f MIN", id(train_7_to_34_st_hudson_yards_next_train_due_in).state);
+        it.printf(150, 684, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_7_to_queens_next_train_due_at).state.c_str());
+        it.printf(330, 684, id(font_small_book), color_text, TextAlign::TOP_CENTER, "%s", id(train_7_to_34_st_hudson_yards_next_train_due_at).state.c_str());
 
         // Refresh Timestamp
         // Code by EnsconcE from https://community.home-assistant.io/t/esphome-show-time/348903
